tryphon_macros/tests/ui/fail/union_config.stderr
error: Union type is not supported!
 --> tests/ui/fail/union_config.rs:3:10
  |
3 | #[derive(Config)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Config` (in Nightly builds, run with -Z macro-backtrace for more info)
